--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@ _flutter.buildConfig = {"engineRevision":"1425e5e9ec5eeb4f225c401d8db69b860e0fde
 
       _flutter.loader.load({
         // #Pangea
-        entrypointUrl: "main.dart.js?v=" + "3968652454",
+        entrypointUrl: "main.dart.js?v=" + "548110116",
         // Pangea#
         serviceWorker: {
-          serviceWorkerVersion: "3968652454",
+          serviceWorkerVersion: "548110116",
         },
       onEntrypointLoaded: function (engineInitializer) {
         engineInitializer.initializeEngine({ useColorEmoji: true }).then(function (appRunner) {
@@ -106,6 +106,33 @@ _flutter.buildConfig = {"engineRevision":"1425e5e9ec5eeb4f225c401d8db69b860e0fde
       });
     });
   </script>
+
+  <!-- #Pangea -->
+  <script>
+    (function() {
+      const userAgent = navigator.userAgent || navigator.vendor || window.opera;
+      const isAndroid = /android/i.test(userAgent);
+      const isIOS = /iPhone|iPad|iPod/i.test(userAgent);
+      const isMobile = isAndroid || isIOS;
+
+      if (!isMobile) return; // Exit if not a mobile device
+
+      const appScheme = 'pangea://'; // Replace with your app's scheme
+      const fallbackURL = isIOS
+        ? 'https://apps.apple.com/app/pangea-chat/id1445118630'
+        : 'https://play.google.com/store/apps/details?id=com.talktolearn.chat';
+
+      // Try opening the app
+      window.location = appScheme;
+
+      // Fallback to App Store / Play Store if not installed
+      setTimeout(() => {
+        window.location = fallbackURL;
+      }, 1500);
+    })();
+  </script>
+  <!-- Pangea# -->
+
   <picture id="splash">
     <!-- #Pangea -->
     <!-- <source
