deploy: 93bf9067193b92a749dbdfbea24171ac56e5339a

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@ _flutter.buildConfig = {"engineRevision":"ddf47dd3ff96dbde6d9c614db0d7f019d7c7a2
 
       _flutter.loader.load({
         // #Pangea
-        entrypointUrl: "main.dart.js?v=" + "1079347120",
+        entrypointUrl: "main.dart.js?v=" + "3361673668",
         // Pangea#
         serviceWorker: {
-          serviceWorkerVersion: "1079347120",
+          serviceWorkerVersion: "3361673668",
         },
       onEntrypointLoaded: function (engineInitializer) {
         engineInitializer.initializeEngine({ useColorEmoji: true }).then(function (appRunner) {
@@ -143,7 +143,8 @@ _flutter.buildConfig = {"engineRevision":"ddf47dd3ff96dbde6d9c614db0d7f019d7c7a2
     <img class="center" src="splash/img/light-1x.png" /> -->
     <div class="center">
       <div class="image">
-        <img src="splash/img/light-1x.png" />
+        <img src="
+https://pangea-chat-client-assets.s3.us-east-1.amazonaws.com/pangea-logo.svg" />
       </div>
       <div class="custom-loader"></div>
     </div>
